--- a/src/app/component/leave-user/leave-user.component.css
+++ b/src/app/component/leave-user/leave-user.component.css
@@ -1,4 +1,4 @@
-mat-form-field{
+ /* mat-form-field{
     width: 20em;
 }
 .mat-row:nth-child(2n){
@@ -23,4 +23,27 @@ mat-form-field{
     font-weight: 500;
     font-size: 14px;
   }
-  
+    */
+
+    /* @import url('../leave-user/leave-user.component.css'); */
+.table__section{
+  width: 100%;
+  margin: 2em 0;
+
+}
+.mat-row .mat-cell {
+  border-bottom: 1px solid transparent;
+  border-top: 1px solid transparent;
+  cursor: pointer;
+}
+.mat-header-cell{
+    font-weight: 600;
+}
+.mat-header-cell{
+  background-color:#f9fafb;
+  color: #000;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+
