--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -16,50 +16,111 @@
 </div>
 
 <div style="padding: 2em;">
-    <div style="display: flex; justify-content: space-between;align-items: center; flex-wrap: wrap;">
+    <div style="display: flex; justify-content:center; align-items: center;  ">
 
-        <mat-card style="height: 4em;width: 23vw">
-            <div style="font-size: 1.5em; font-weight: 500">Total</div>
-            <div style="display: flex; justify-content: center; align-items: center; font-size: 1.5em; font-weight: 400; margin-top: 10px;">100</div>
+        <mat-card
+            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+            <div>
+                <div style="font-size: 1.8em; line-height: 1.8em;">Total Leave</div>
+                <div style="font-size: 1.2em">02</div>
+            </div>
+            <div>
+                <button style="width: 70px; height: 70px;" mat-fab color="primary"
+                    aria-label="Example icon button with a delete icon">
+                    <mat-icon style="transform: scale(1.1);">people</mat-icon>
+                </button>
+            </div>
+
+
         </mat-card>
+        <mat-card
+            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+            <div>
+                <div style="font-size: 1.8em; line-height: 1.8em;">Monthly Leave</div>
+                <div style="font-size: 1.2em">02</div>
+            </div>
+            <div>
+                <button style="width: 5em;height:5em;" mat-fab color="primary"
+                    aria-label="Example icon button with a delete icon">
+                    <mat-icon style="transform: scale(1.4);">apps</mat-icon>
+                </button>
+            </div>
+
+
+        </mat-card>
+        <mat-card
+            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+            <div>
+                <div style="font-size: 1.8em; line-height: 1.8em;">Request</div>
+                <div style="font-size: 1.2em">02</div>
+            </div>
+            <div>
+                <button style="width: 5em;height:5em;" mat-fab color="primary"
+                    aria-label="Example icon button with a delete icon">
+                    <mat-icon style="transform: scale(1.4);">explorer</mat-icon>
+                    <i class="bi bi-send-exclamation"></i>
+                </button>
+            </div>
+
+
+        </mat-card>
+
     </div>
+
 
     <!--Table SECTION-->
 
-    <div class="mat-elevation-z2" style="margin-top: 2em;">
-        <table mat-table [dataSource]="dataSource" style="width: 100%;">
-
-            <!-- Position Column -->
-            <ng-container matColumnDef="position">
-                <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-            </ng-container>
-
-            <!-- Leave Type Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> LeaveType </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-
-            <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-                <th mat-header-cell *matHeaderCellDef> From </th>
-                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-            </ng-container>
-
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-                <th mat-header-cell *matHeaderCellDef> To </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-            </ng-container>
-
-
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
-        </mat-paginator>
+    <div style="margin-top: 1em; margin-bottom: -1em;">
+        <h3>Your Leave Application</h3>
     </div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 table__section">
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef>No</th>
+            <td mat-cell *matCellDef="let element">{{element.position}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="weight">
+            <th mat-header-cell *matHeaderCellDef>Leave Type</th>
+            <td mat-cell *matCellDef="let element">{{element.weight}}</td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="symbol">
+            <th mat-header-cell *matHeaderCellDef>Posting Date</th>
+            <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element">
+                <div>Pending</div>
+
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon color="primary">edit</mat-icon>
+                <mat-icon style="margin-left: 5px;" color="warn">delete</mat-icon>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+
+        </tr>
+
+
+
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+    </mat-paginator>
 </div>
