--- a/src/app/component/attendance/attendance.component.html
+++ b/src/app/component/attendance/attendance.component.html
@@ -181,46 +181,85 @@
 
     <div>
         <table class="mat-elevation-z2" mat-table [dataSource]="dataSource" style="width: 100%;">
-            <!-- Position Column -->
-            <ng-container matColumnDef="no">
-                <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-            </ng-container>
-
             <!-- Leave Type Column -->
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef> Date </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                <td mat-cell *matCellDef="let element; let i = index">
+                    <span>{{ days[this.paginator.pageIndex * this.paginator.pageSize + i] }},</span>
+                    <ng-container *ngFor="let item of element; let i = index">
+                        <ng-container *ngIf="i == 0">
+                            {{ item.created.date | date: 'dd MMM yyyy' }}
+                        </ng-container>
+                    </ng-container>
+                </td>
             </ng-container>
 
             <!-- Weight Column -->
             <ng-container matColumnDef="clock in 1">
                 <th mat-header-cell *matHeaderCellDef> Clock in 1 </th>
-                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                <td mat-cell *matCellDef="let element; let i = index">
+                    <!-- {{ element.length }} -->
+                    <ng-container *ngFor="let item of element">
+                        <ng-container *ngIf="item.attendance_type == 'clock in 1'">
+                            {{ item.created.date | date: 'h:mm:ss a' }}
+                        </ng-container>
+                    </ng-container>
+                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sun'">
+                        <span style="color: rgb(255, 60, 60);">Week Off</span>
+                    </ng-container>
+                </td>
             </ng-container>
 
             <!-- Symbol Column -->
             <ng-container matColumnDef="clock out 1">
                 <th mat-header-cell *matHeaderCellDef> Clock out 1 </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                <td mat-cell *matCellDef="let element; let i = index">
+                    <ng-container *ngFor="let item of element">
+                        <ng-container *ngIf="item.attendance_type == 'clock out 1'">
+                            {{ item.created.date | date: 'h:mm:ss a' }}
+                        </ng-container>
+                        <ng-container *ngIf="item.attendance_type != 'clock out 1' && (days[this.paginator.pageIndex * this.paginator.pageSize + i] != 'Sat' && days[this.paginator.pageIndex * this.paginator.pageSize + i] != 'Sun')">Miss</ng-container>
+                    </ng-container>
+                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sun'">
+                        <span style="color: rgb(255, 60, 60);">Week Off</span>
+                    </ng-container>
+                </td>
             </ng-container>
 
             <!-- Weight Column -->
             <ng-container matColumnDef="clock in 2">
                 <th mat-header-cell *matHeaderCellDef> Clock in 2 </th>
-                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                <td mat-cell *matCellDef="let element; let i = index">
+                    <ng-container *ngFor="let item of element">
+                        <ng-container *ngIf="item.attendance_type == 'clock in 2'">
+                            {{ item.created.date | date: 'h:mm:ss a' }}
+                        </ng-container>
+                    </ng-container>
+                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sun'">
+                        <span style="color: rgb(255, 60, 60);">Week Off</span>
+                    </ng-container>
+                </td>
             </ng-container>
 
             <!-- Symbol Column -->
             <ng-container matColumnDef="clock out 2">
                 <th mat-header-cell *matHeaderCellDef> Clock out 2 </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                <td mat-cell *matCellDef="let element; let i = index">
+                    <ng-container *ngFor="let item of element">
+                        <ng-container *ngIf="item.attendance_type == 'clock out 2'">
+                            {{ item.created.date | date: 'h:mm:ss a' }}
+                        </ng-container>
+                    </ng-container>
+                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sun'">
+                        <span style="color: rgb(255, 60, 60);">Week Off</span>
+                    </ng-container>
+                </td>
             </ng-container>
 
             <!-- Symbol Column -->
             <ng-container matColumnDef="total hours">
                 <th mat-header-cell *matHeaderCellDef> Total Work Time </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                <td mat-cell *matCellDef="let element"></td>
             </ng-container>
 
 
