--- a/src/app/component/Reports/employee-report-attendance/employee-report-attendance.component.html
+++ b/src/app/component/Reports/employee-report-attendance/employee-report-attendance.component.html
@@ -59,15 +59,19 @@
     <div>
         <h2 style="color: rgb(30, 140, 243);">Employees Report ( {{length}} )</h2>
     </div>
-
     <div style="font-size: 10px;">
+
         <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
         <table mat-table matTableExporter #exporter="matTableExporter" mat-table [dataSource]="dataSource"
             class="mat-elevation-z4 table__section" matSort style="width: 80vw; ">
             <!-- Position Column -->
-            <ng-container matColumnDef="user_id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-                <td mat-cell *matCellDef="let element">{{element.user_id}}</td>
+            <ng-container matColumnDef="employeeId">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>EmployeeID</th>
+                <td mat-cell *matCellDef="let e">
+
+                    {{e.employeeId}}
+
+                </td>
             </ng-container>
 
             <!-- Name Column -->
@@ -79,28 +83,47 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
                 <td mat-cell *matCellDef="let element">{{element.email}}</td>
             </ng-container>
-            <ng-container matColumnDef="leaveType">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>LeaveType</th>
-                <td mat-cell *matCellDef="let element">{{element.leave_reason}}</td>
+            <ng-container matColumnDef="created.date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+                <td mat-cell *matCellDef="let element">{{element.created.date | date:'yyyy-MM-dd'}}</td>
             </ng-container>
-            <ng-container matColumnDef="start.date">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>From</th>
-                <td mat-cell *matCellDef="let element">{{element.start.date |date: "yyyy-MM-dd" }}</td>
-            </ng-container>
-            <ng-container matColumnDef="end.date">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>To</th>
-                <td mat-cell *matCellDef="let element">{{element.end.date | date: "yyyy-MM-dd"}}</td>
-            </ng-container>
-            <ng-container matColumnDef="totalLeave">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Day</th>
-                <td mat-cell *matCellDef="let element">{{totalLeave[element.id]}} days</td>
-
-            </ng-container>
-            <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-                <td mat-cell *matCellDef="let element">
-                    <div>{{element.status}}</div>
+            <ng-container matColumnDef="clock in 1">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Clock In 1</th>
+                <td mat-cell *matCellDef="let e">
+                    <ng-container *ngIf="e.attendance_type == '1' ">
+                        <div>{{e.attendance_type}}</div>
+                    </ng-container>
                 </td>
+            </ng-container>
+            <ng-container matColumnDef="clock out 1">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Clock In 1</th>
+                <td mat-cell *matCellDef="let e">
+                    <ng-container *ngIf="e.attendance_type == '2' ">
+                        <div>{{e.attendance_type}}</div>
+                    </ng-container>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="clock in 2">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Clock In 1</th>
+                <td mat-cell *matCellDef="let e">
+                    <ng-container *ngIf="e.attendance_type == '3' ">
+                        <div>{{e.attendance_type}}</div>
+                    </ng-container>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="clock out 2">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Clock In 1</th>
+                <td mat-cell *matCellDef="let e">
+                    <ng-container *ngIf="e.attendance_type == '4' ">
+                        <div>{{e.attendance_type}}</div>
+                    </ng-container>
+                </td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="totalhours">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Hours</th>
+                <td mat-cell *matCellDef="let element">{{element.totalhours}}</td>
             </ng-container>
 
 
@@ -113,6 +136,6 @@
         </table>
     </div>
 
-    <mat-paginator style="background-color: #fafafa;" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+    <mat-paginator style="background-color: #fafafa;" [pageSizeOptions]="[10, 10, 20]" showFirstLastButtons
         aria-label="Select page of periodic elements">
     </mat-paginator>
