--- a/src/app/component/Reports/employee-report-attendance/employee-report-attendance.component.html
+++ b/src/app/component/Reports/employee-report-attendance/employee-report-attendance.component.html
@@ -77,22 +77,43 @@
             <!-- Name Column -->
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Full Name</th>
-                <td mat-cell *matCellDef="let element">{{element.firstName + " " + element.lastName}}</td>
+                <td mat-cell *matCellDef="let element">
+                    <ng-container *ngFor="let e of element">
+                    </ng-container>
+                </td>
             </ng-container>
             <ng-container matColumnDef="email">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-                <td mat-cell *matCellDef="let element">{{element.email}}</td>
+                <td mat-cell *matCellDef="let element">
+                    <ng-container *ngFor="let e of element">
+                    </ng-container>
+                </td>
             </ng-container>
             <ng-container matColumnDef="created.date">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-                <td mat-cell *matCellDef="let element">{{element.created.date | date:'yyyy-MM-dd'}}</td>
+                <td mat-cell *matCellDef="let element">
+                    <ng-container *ngFor="let e of element">
+                    </ng-container>
+                </td>
             </ng-container>
             <ng-container matColumnDef="clock in 1">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Clock In 1</th>
                 <td mat-cell *matCellDef="let e">
-                    <ng-container *ngIf="e.attendance_type == '1' ">
-                        <div>{{e.attendance_type}}</div>
+                    <ng-container *ngFor="let item of e">
+                        <ng-container *ngIf="e.attendance_type == '1' ">
+                            <div>{{e.attendance_type}}</div>
+                        </ng-container>
+                        <ng-container *ngIf="e.attendance_type == '2' ">
+                            <div>{{e.attendance_type}}</div>
+                        </ng-container>
+                        <ng-container *ngIf="e.attendance_type == '1' ">
+                            <div>{{e.attendance_type}}</div>
+                        </ng-container>
+                        <ng-container *ngIf="e.attendance_type == '1' ">
+                            <div>{{e.attendance_type}}</div>
+                        </ng-container>
                     </ng-container>
+
                 </td>
             </ng-container>
             <ng-container matColumnDef="clock out 1">
