--- a/src/app/component/Reports/employee-report-attendance/employee-report-attendance.component.html
+++ b/src/app/component/Reports/employee-report-attendance/employee-report-attendance.component.html
@@ -20,11 +20,10 @@
                 <form style="width: 55%;display: flex;align-items: center; justify-content: space-between ">
                     <mat-form-field appearance="outline" style="padding: 0; margin-top: 20px">
                         <mat-label>Search Name</mat-label>
-                        <input type="text" placeholder="Search name" aria-label="Number"
-                            (keyup.enter)="getOneEmployee()" matInput [formControl]="myControl" [matAutocomplete]="auto"
-                            [(ngModel)]="value">
+                        <input type="text" placeholder="Search name" aria-label="Number" matInput
+                            [formControl]="myControl" [matAutocomplete]="auto" [(ngModel)]="value">
                         <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''"
-                            (click)="reset()" style="color: #d64633;">
+                            style="color: #d64633;">
                             <mat-icon>close</mat-icon>
                         </button><button *ngIf="!value" matSuffix mat-icon-button style="color: rgb(30, 140, 243)">
                             <mat-icon>search</mat-icon>
@@ -39,10 +38,10 @@
             </div>
             <div style="display: flex; align-items:center">
                 <div>
-                    <button type="submit" mat-raised-button color="primary" (click)="getOneEmployee()">
+                    <button type="submit" mat-raised-button color="primary">
                         <mat-icon style="margin-right: 4px;">search</mat-icon> Search
                     </button>
-                    <button type="reset" mat-raised-button color="warn" style="margin-left: 30px;" (click)="reset()">
+                    <button type="reset" mat-raised-button color="warn" style="margin-left: 30px;">
                         <mat-icon style="margin-right: 8px;">settings_backup_restore</mat-icon>
                         Reset
                     </button>
@@ -66,10 +65,18 @@
             class="mat-elevation-z4 table__section" matSort style="width: 80vw; ">
             <!-- Position Column -->
             <ng-container matColumnDef="employeeId">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>EmployeeID</th>
-                <td mat-cell *matCellDef="let e">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>No</th>
+                <td mat-cell *matCellDef="let e; let no = index">
                     <ng-container *ngFor="let item of e; let i = index">
-                        <div *ngIf="i==0">{{item.employeeId}}</div>
+                        <div *ngIf="i==0">{{no+1}}</div>
+                    </ng-container>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+                <td mat-cell *matCellDef="let e; let no = index">
+                    <ng-container *ngFor="let item of e; let i = index">
+                        <div *ngIf="i==0">{{item.created.date | date: 'EE, dd MMM y'}}</div>
                     </ng-container>
                 </td>
             </ng-container>
@@ -88,7 +95,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
                 <td mat-cell *matCellDef="let e">
                     <ng-container *ngFor="let item of e; let i = index">
-                        <div *ngIf="i==0">{{item.email}}{{i}}</div>
+                        <div *ngIf="i==0">{{item.email}}</div>
                     </ng-container>
                 </td>
             </ng-container>
@@ -99,7 +106,8 @@
                         <ng-container *ngIf="item.attendance_type == '1' ">
                             <div>{{item.created.date | date: "h:mm:ss a"}}</div>
                         </ng-container>
-                        <ng-container *ngIf="checkCondition(item.attendance_type, 1, i, e.length-1)">{{notClockIn}}
+                        <ng-container *ngIf="checkCondition(item.attendance_type, 1, i, e.length-1)">
+                            {{notClockIn}}
                         </ng-container>
                     </ng-container>
                 </td>
